# minder-rules-and-profiles

./: CONTRIBUTING.md  README.md  Taskfile.yml  go.mod  go.sum  rules_test.go
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ensure-tests-for-all-rules.yml  install.yaml  lint.yaml  semgrep.yaml  test.yml  trivy.yml  update.yaml
.regal/: config.yaml
autofill-insights/: README.md  profile.yaml
autofill-insights/data-sources/: insightsghapi.yaml
autofill-insights/rule-types/: insights-exists.yaml  insights-up-to-date.yaml  insights_exists.yaml  insights_up_to_date.yaml
data-sources/: ghapi.yaml  openssf_bestpractices.yaml  osi.yaml  osv.yaml  security-insights.yaml  sonatype-oss-index.yaml  sonatype_oss_index.yaml  spdx-license-list.yaml  trusty.yaml
docs/: rule-type-quick-reference.md  writing-rule-types.md
profiles/github/: README.md  artifact_attestation_slsa.yaml  branch-protection.yaml  dependabot_ghactions.yaml  dependabot_go.yaml  dependabot_npm.yaml  dependabot_npm_docs.yaml  dependabot_pip.yaml  dependabot_rust.yaml  dependencies.yaml  ghas.yaml  homoglyphs.yaml  openssf_scorecard.yaml  openssf_security_baseline.yaml  profile.yaml  repo_security.yaml  scorecard-action.yaml  security_baseline_1.yaml  stacklok-health-check.yaml  stacklok-lightweight-dependabot.yaml  stacklok-profile-read-only.yaml  stacklok-profile-remediate.yaml  stacklok-profile.yaml  trivy.yaml  workflow_security.yaml
rule-types/common/python_lock_file_exists.testdata/pdm_lock/: pyproject.toml
scripts/: extract-rego.py  migrate-rego-v1.py
security-baseline/: README.md
(+272 files in other folders)
