[project]
name = "proj"
version = "0.1.0"
description = "Some description"
authors = [
]
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.25.0",
    "scipy>=1.11.1",
    "pandas>=2.0.3",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.9,<3.12"
license = "MIT"
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
